--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.jedis-3.7.0.jar=/Users/gagan/NetBeansProjects/Libraries/Java/jedis-3.7.0.jar
 file.reference.json-simple-1.1.1.jar=/Users/gagan/NetBeansProjects/Libraries/Java/json-simple-1.1.1.jar
 file.reference.ojdbc7.jar=/Users/gagan/NetBeansProjects/Libraries/Java/Connection_library/ojdbc7.jar
+file.reference.slf4j-api-1.7.6.jar=/Users/gagan/NetBeansProjects/Libraries/Java/slf4j-api-1.7.6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +48,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.jedis-3.7.0.jar}:\
+    ${file.reference.slf4j-api-1.7.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
