session dummy test

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.8.5.jar=/Users/gagan/NetBeansProjects/Libraries/Java/gson-2.8.5.jar
 file.reference.jedis-3.7.0.jar=/Users/gagan/NetBeansProjects/Libraries/Java/jedis-3.7.0.jar
 file.reference.json-simple-1.1.1.jar=/Users/gagan/NetBeansProjects/Libraries/Java/json-simple-1.1.1.jar
 file.reference.ojdbc7.jar=/Users/gagan/NetBeansProjects/Libraries/Java/Connection_library/ojdbc7.jar
 file.reference.slf4j-api-1.7.6.jar=/Users/gagan/NetBeansProjects/Libraries/Java/slf4j-api-1.7.6.jar
+file.reference.stripe-java-20.75.0.jar=/Users/gagan/NetBeansProjects/Libraries/Java/stripe-java-20.75.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,7 +52,9 @@ javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jedis-3.7.0.jar}:\
-    ${file.reference.slf4j-api-1.7.6.jar}
+    ${file.reference.slf4j-api-1.7.6.jar}:\
+    ${file.reference.stripe-java-20.75.0.jar}:\
+    ${file.reference.gson-2.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
